<?xml version="1.0"?>
<package format="3">
  <name>rl_quadrotor</name>
  <version>0.0.0</version>

  <description>RL Quadrotor package</description>

  <maintainer email="you@email.com">naman</maintainer>
  <license>MIT</license>

  <!-- Build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
